initial home page design complete

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a75fb6ec59.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Advance Money Transfer</title>
   </head>
   <body>
