mobile responsive complete

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,12 @@
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+  disable: function() {
+    let maxWidth = 800;
+    return window.innerWidth < maxWidth;
+  }
+});
     </script>
   </body>
 </html>
